runtime/tests/cases/syntax/errors/unclosed_interpolation.bobbin
temp name = "Alice"
Hello, {name!
